some details in web

--- a/posts-in-blog/fina-mobile-app.mdx
+++ b/posts-in-blog/fina-mobile-app.mdx
@@ -10,7 +10,7 @@
 
 ## Problem
 
-In the past the company handle all the orders from clients in books of papers
+In the past the company handle all the orders from clients in books
 that when them receive many lose all the control about what orders was shipped
 and what are actually have items reamining and the ammount of how much 
 them have pending.
@@ -19,17 +19,19 @@ them have pending.
 
 A mobile app that help to company have a control about what order have shippings,
 items pendings of ship and how much are waiting for receive, flexible for allow
-recive orders in front of clients and share it with them.
+recive orders in front of clients and share it with them inmediatily.
 
 ### Technology Stack
 
 - React@18.
 - React Native.
-- Expo.
 - Expo Application Service (EAS) from build android and iOS app.
 - NodeJs.
 - ExpressJS.
 - PrismaORM.
 - PostgrelSQL.
 
+## Process
+
+####
 <Social/>
