layout design changes

--- a/posts-in-blog/fina-mobile-app.mdx
+++ b/posts-in-blog/fina-mobile-app.mdx
@@ -10,10 +10,12 @@
 
 ## Problem
 
-In the past the company handle all the orders from clients in books
-that when them receive many lose all the control about what orders was shipped
-and what are actually have items reamining and the ammount of how much 
-them have pending.
+The company growt to a level that don't handle correctly the orders from clients and some orders are
+missing withn all the orders and overlap from the new ones or dont get correctly follow-up for check
+if its are done or some items of thems are'nt complete.
+
+Actually all the process are manage for books in papers and avoid a fast review about orders, items
+and shipppings for clients and eventualy a follow-up of invoices and cash advances.
 
 ## Solution
 
@@ -22,10 +24,13 @@ items pendings of ship and how much are waiting for receive, flexible for allow
 recive orders in front of clients and share it with them inmediatily.
 
 ### Technology Stack
+*Mobile App Stack*
 
 - React@18.
 - React Native.
-- Expo Application Service (EAS) from build android and iOS app.
+
+*Backend Service API*
+
 - NodeJs.
 - ExpressJS.
 - PrismaORM.
