Rewrite FINA Post Content

--- a/posts-in-blog/fina-mobile-app.mdx
+++ b/posts-in-blog/fina-mobile-app.mdx
@@ -6,37 +6,43 @@
  type: "Case Study"
  url: "fina-mobile-app"
 ---
-# Case Study : FINA Mobile App
-------
+# FINA APP
+
 ## Problem
 
-The company growt to a level that don't handle correctly the orders from clients and some orders are
-missing withn all the orders and overlap from the new ones or dont get correctly follow-up for check
-if its are done or some items of thems are'nt complete.
+Orders from clients lose all the tracking that is needed for get finish to them and don’t known which items and on time, using paper books that not always known where was written, and process and problem to supply basic products for produce orders without planning correctly what request to providers for consume.
 
-Actually all the process are manage for books in papers and avoid a fast review about orders, items
-and shipppings for clients and eventualy a follow-up of invoices and cash advances.
+## Solution provided
 
-## Solution
+An app mobile for get all orders from clients and get details of what, when and how much are for clients orders and too delivery orders, allowing get a tracking about all the process and time for both clients and production team, while other areas of the company are going to validate an historical review of orders.
 
-A mobile app that help to company have a control about what order have shippings,
-items pendings of ship and how much are waiting for receive, flexible for allow
-recive orders in front of clients and share it with them inmediatily.
+## Thinks to be considered
 
-### Technology Stack
-*Mobile App Stack*
+- Manufacture person dont have adaptive mindset.
+- Need to be simple and easy to use for all.
 
-- React@18.
-- React Native.
+## Functional Requirements
 
-*Backend Service API*
+- User should be able to sign in.
+- User should be able to add orders.
+- User should be able to add clients.
+- User should be able to delete orders.
+- User should be able to add delivery orders.
+- User should be able to share orders to another app or service.
+- User should be able to share delivery orders to another app or service.
+- User should be able to change password.
+- User should be able to add new users.
+- User should be able to filter orders from status.
+- User should be able to sign out.
+- User should be able to get reports from orders in a period.
+- User should be able to review orders details suck as price per inch, date, and items.
 
-- NodeJs.
-- ExpressJS.
-- PrismaORM.
-- PostgrelSQL.
+## No Functional Requirements
 
-## Process
-
-####
-<Social/>
+- Minimum iOs 14
+- Minimum Android 12.
+- Backend use NodeJs.
+- Database use PostgresSQL.
+- Cache use Redis.
+- Communication between App & backend use Json Web Token.
+- Frontend Software: React Native.
