--- a/posts-in-blog/fina-mobile-app.mdx
+++ b/posts-in-blog/fina-mobile-app.mdx
@@ -16,28 +16,16 @@ Orders from clients lose all the tracking that is needed for get finish to them 
 
 An app mobile for get all orders from clients and get details of what, when and how much are for clients orders and too delivery orders, allowing get a tracking about all the process and time for both clients and production team, while other areas of the company are going to validate an historical review of orders.
 
-## Thinks to be considered
+Streamline the follow-up and the generation of orders directly from the site of client.
 
-- Manufacture person dont have adaptive mindset.
+### Some Screens of the app
+![Some Screen](http://localhost:3000/AppDev.webp "Desktop App") | ![Some Screen](http://localhost:3000/AppDev.webp "Desktop App")
+## Thinks was be considered
+
 - Need to be simple and easy to use for all.
+- System should be work in almost any device.
 
-## Functional Requirements
-
-- User should be able to sign in.
-- User should be able to add orders.
-- User should be able to add clients.
-- User should be able to delete orders.
-- User should be able to add delivery orders.
-- User should be able to share orders to another app or service.
-- User should be able to share delivery orders to another app or service.
-- User should be able to change password.
-- User should be able to add new users.
-- User should be able to filter orders from status.
-- User should be able to sign out.
-- User should be able to get reports from orders in a period.
-- User should be able to review orders details suck as price per inch, date, and items.
-
-## No Functional Requirements
+## NO Functional Requirements
 
 - Minimum iOs 14
 - Minimum Android 12.
@@ -46,3 +34,16 @@ An app mobile for get all orders from clients and get details of what, when and 
 - Cache use Redis.
 - Communication between App & backend use Json Web Token.
 - Frontend Software: React Native.
+
+
+
+## Funcional Requirements
+
+- The system must provide access to orders.
+- The system must provide access to shippings.
+- The system must provide acess to clients.
+- The user able  to sign in in different roles.
+- The user able to create clients.
+- The user able to create orders.
+- The user able to create shippings from orders.
+- The user able to mark done orders.
