fix layout shifts

--- a/posts-in-blog/fina-mobile-app.mdx
+++ b/posts-in-blog/fina-mobile-app.mdx
@@ -17,33 +17,8 @@ Orders from clients lose all the tracking that is needed for get finish to them 
 An app mobile for get all orders from clients and get details of what, when and how much are for clients orders and too delivery orders, allowing get a tracking about all the process and time for both clients and production team, while other areas of the company are going to validate an historical review of orders.
 
 Streamline the follow-up and the generation of orders directly from the site of client.
-
-### Some Screens of the app
-![Some Screen](http://localhost:3000/AppDev.webp "Desktop App") | ![Some Screen](http://localhost:3000/AppDev.webp "Desktop App")
-## Thinks was be considered
-
-- Need to be simple and easy to use for all.
-- System should be work in almost any device.
-
-## NO Functional Requirements
-
-- Minimum iOs 14
-- Minimum Android 12.
-- Backend use NodeJs.
-- Database use PostgresSQL.
-- Cache use Redis.
-- Communication between App & backend use Json Web Token.
-- Frontend Software: React Native.
-
-
-
-## Funcional Requirements
-
-- The system must provide access to orders.
-- The system must provide access to shippings.
-- The system must provide acess to clients.
-- The user able  to sign in in different roles.
-- The user able to create clients.
-- The user able to create orders.
-- The user able to create shippings from orders.
-- The user able to mark done orders.
+<div className="flex flex-row gap-3 justify-around">
+<img src="http://localhost:3000/FINA_APP/Splash.png" width="150px" height="200px" />
+<img src="http://localhost:3000/FINA_APP/Login.png" width="150px" height="200px" />
+<img src="http://localhost:3000/FINA_APP/Home.png" width="150px" height="200px" />
+</div>
