added hero and about section

--- a/posts-in-blog/distribuidora-catalina.mdx
+++ b/posts-in-blog/distribuidora-catalina.mdx
@@ -9,5 +9,10 @@
 
 # Distribuidora Catalina
 
-A website for a factory company that are growing and getting better
-and more clients and production about the past.
+Fabrica especilizada en la producción de textiles para calzado tipo cordón en diferentes presentaciones y colores para el mercado costarricense, desde el año 2004 ha estado en un constante desarrollo de productos de altisima calidad con gran variedad de los mismos, logrando alianzas con grandes clientes del mercado.
+
+## Desafio
+ La empresa nunca ha tenido una presencia en redes ni en internet lo cual hace que este nuevo medio de contacto para la realización de pedidos y mostrarse al mundo, lo cual un gran desafio es poder lograr una presencia acorde a la empresa y que ayude en la muestra del amplio catalogo que tiene la misma.
+
+## Objetivos a lograr
+- 
