add some contact form

--- a/posts-in-blog/distribuidora-catalina.mdx
+++ b/posts-in-blog/distribuidora-catalina.mdx
@@ -1,6 +1,6 @@
 ---
  title: "Distribuidora Catalina"
- description: "Website for a factory from Costa Rica"
+ description: "Factory Website for a medium size company from Costa Rica."
  author: "Daniel Arce"
  date: 07-19-2024
  type: "Case Study"
@@ -9,10 +9,13 @@
 
 # Distribuidora Catalina
 
-Fabrica especilizada en la producción de textiles para calzado tipo cordón en diferentes presentaciones y colores para el mercado costarricense, desde el año 2004 ha estado en un constante desarrollo de productos de altisima calidad con gran variedad de los mismos, logrando alianzas con grandes clientes del mercado.
+Fabrica especilizada en la producción de textiles para calzado tipo cordón en diferentes presentaciones y colores para el mercado costarricense, desde el año 2004 ha estado en un constante desarrollo de productos de altisima calidad con gran variedad de los mismos, logrando alianzas para aumentar la presencia en el mercado.
 
 ## Desafio
  La empresa nunca ha tenido una presencia en redes ni en internet lo cual hace que este nuevo medio de contacto para la realización de pedidos y mostrarse al mundo, lo cual un gran desafio es poder lograr una presencia acorde a la empresa y que ayude en la muestra del amplio catalogo que tiene la misma.
 
 ## Objetivos a lograr
-- 
+- Dar a conocer la experiencia de 20 años en la industria de los textiles.
+- Ofrecer un catalogo dinamico de todas las combinaciones.
+- Ofrecer un canal de comunicación mas directo para mejorar el proceso.
+
